<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_category"
        android:title="@string/tittle_category"
        android:icon="@drawable/table_list_solid"/>

    <item
        android:id="@+id/navigation_home"
        android:title="@string/title_reports"
        android:icon="@drawable/chart_line_solid"/>
    <item
        android:id="@+id/navigation_create_transaction"
        android:title="@string/title_create_transaction"
        android:icon="@drawable/circle_plus_solid"/>

    <item
        android:id="@+id/navigation_view_transactions"
        android:title="@string/title_view_transactions"
        android:icon="@drawable/hand_holding_dollar_solid"/>

    <item
        android:id="@+id/navigation_user"
        android:title="@string/title_profile"
        android:icon="@drawable/user_solid"/>


</menu>