<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spenditure.presentation.ViewTransactionsActivity">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_view_transactions"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayout_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/listview_transactions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_title">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/togglebutton_transaction_date_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Newest First"
            android:textOff="Oldest First"
            android:layout_margin="50dp"
            app:layout_constraintBottom_toTopOf="@+id/listview_transactions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_title"/>

        <Button
            android:id="@+id/button_edit"
            android:enabled="false"
            android:onClick="editTransactionClicked"
            android:text="@string/label_edit"
            android:layout_margin="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_delete"
            android:enabled="false"
            android:onClick="deleteTransactionClicked"
            android:text="@string/label_delete"
            android:layout_margin="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listview_transactions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_view_transactions"
        android:textSize="40dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_controls"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>